fixed width inconsistency issue added desktop toc fixed bad scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -197,7 +197,7 @@
     @apply mx-auto w-full max-w-7xl;
   }
 
-  .cpx {
+  .btnb {
     @apply px-4 lg:px-6;
   }
 }
